--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -8,3 +8,4 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       - uses: gabalafou/action-sandbox/.github/actions/env@main
+      - run: echo "github.action_repository = ${{ github.action_repository }}
