--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -7,5 +7,5 @@ jobs:
   list-env:
     runs-on: ubuntu-latest
     steps: 
-      - uses: gabalafou/action-sandbox/.github/actions/env@main
+      - uses: gabalafou/action-sandbox@main
       - run: echo "github.action_repository = ${{ github.action_repository }}
