--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -8,4 +8,4 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       - uses: gabalafou/action-sandbox@main
-      - run: echo "github.action_repository = ${{ github.action_repository }}
+      - run: echo "github.action_repository = ${{ github.action_repository }}"
